# tenma-program

./: .gitignore  Anchor.toml  LICENSE  README.md
idl/: horsegame.json
programs/horsegame/: Cargo.toml
programs/horsegame/src/: constants.rs  errors.rs  helpers.rs  instructions.rs  lib.rs  state.rs
types/: horsegame.ts
