[package]
name = "horsegame"
version = "0.1.0"
description = "Horse Racing & Staking Game on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "horsegame"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
test = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.0", features = ["token_2022"] }
